--- a/sample.properties
+++ b/sample.properties
@@ -1,5 +1,5 @@
 # Sample properties file
-app.name=サンプルプロパティファイルエディター
+app.name=サンプルプロパティファイルエディタ
 user.message=こんにちは
 greeting=Hello こんにちは
 number=123
