--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./"
+    "watch": "tsc -watch -p ./",
+    "build": "vsce package"
   },
   "devDependencies": {
     "@types/vscode": "^1.74.0",
