--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   "activationEvents": [],
   "main": "./out/extension.js",
   "contributes": {
+    "commands": [
+      {
+        "command": "properties.showLogs",
+        "title": "Show Properties Extension Logs"
+      }
+    ],
     "languages": [
       {
         "id": "properties",
